# kreatrix

./: .bzrignore  BUGS  Changelog  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  cleanall.sh  config.h.in  configure  configure.ac  kxconfig.h.in
apps/box/: box.kx  browser.kx  browser_bytecode.kx
benchmarks/: benchmark.kx  clean.sh  compare.sh  data.txt  massif_start.sh  run.kx  run2.kx  run3.kx  run_speedtest.sh  run_stat.sh  t1_recursive.kx  t2_graph.kx  t2_wcounter.kx  test.list  test_all.sh  test_start.sh  valgrind_start.sh
benchmarks/basic/: mdispatch.kx
benchmarks/logparsers/: clean.sh  create-graph.sh  create-tex.sh  graph.r  graph2hist.r  head.tex  stat.kx
benchmarks/scripts/: getmin.kx  speed_test.sh
benchmarks/test1/: bigobject.kx  gc.kx  mdispatch.kx  svn-commit.tmp  t1_rfact.kx  t1_sort.kx  t1_sum.kx
benchmarks/test2/: ccounter.kx  graph.kx  wcounter.kx  world.kx
docs/: Makefile.am  Makefile.in  bnf.txt
docs/examples/: Makefile.am  Makefile.in
docs/examples/basics/: 00_overview.kx  01_math.kx  02_strings.kx  03_conditions.kx  04_cycles.kx  05_class.kx
docs/examples/gtk/: gtkbuttons.kx  gtkcombobox.kx  gtkhelloworld.kx  gtkmenu.kx  gtktextview.kx  gtktreeview.kx
docs/examples/kxweb/: index.html  kxweb.kx  kxweb_threads.kx
docs/examples/profiler/: profiler_demo.kx
docs/examples/xml/: example1.kx
docs/html/: Lobby-Array2d-asString.html  Lobby-Array2d-at..html  Lobby-Array2d-at.put..html  Lobby-Array2d-atX.y..html  Lobby-Array2d-atX.y.put..html  Lobby-Array2d-columnAsList..html  Lobby-Array2d-fillWith..html  Lobby-Array2d-forColumn.do..html  Lobby-Array2d-forRow.do..html  Lobby-Array2d-foreach..html  Lobby-Array2d-height.html  Lobby-Array2d-size..html  (+1845 more)
extra/: kx.vim
modules/: Makefile.am  Makefile.in  noinst_modules_gen.sh
modules/bytecode/: Makefile.am  Makefile.in  bytecode.c  bytecode.kx  kxinstructionobject.c  kxinstructionobject.h
modules/cgi/: Makefile.in  cgi.kx
modules/gtk/: Makefile.am  Makefile.in  gdkevent.c  gdkevent.h  gdkgeometry.c  gdkgeometry.h  generate.sh  gobject.c  gobject.h  gtk.c  gtk.kx  gtk_utils.c  gtk_utils.h  gtkaccelgroup.c  gtkaccelgroup.h  gtkbin.c  gtkbin.h  gtkbox.c  gtkbox.h  gtkbutton.c  gtkbutton.h  gtkcheckbutton.c  gtkcheckbutton.h  gtkcontainer.c  gtkcontainer.h  gtkhbox.c  gtkhbox.h  gtklabel.c  gtklabel.h  gtkmisc.c  gtkmisc.h  gtkobject.c  gtkobject.h  gtkrequisition.c  gtkrequisition.h  gtktextbuffer_extra.c  gtkvbox.c  gtkvbox.h  gtkwidget.c  gtkwidget.h  (+6 more)
modules/gtk/generator/: Makefile-template.am  class.kx  class.xml  constant.kx  constants.xml  enum.kx  enums.txt  function.kx  functions.txt  generator.kx  module.c  object.c  object.h  struct.kx  structs.txt  structs2.txt  type.kx  utils.kx  wrapper.c  wrapper.h  wrapper.kx  wrapper_end.h  wrapper_head.c  wrapper_head.h
modules/pool/: Makefile.am  Makefile.in  kxpool.c  kxpool.h  pool.c  pool.kx
modules/profiler/: Makefile.am  profiler.c  profiler.kx  ptracker.c  ptracker.h
modules/random/: Makefile.am  Makefile.in  kxrandom.c  kxrandom.h  module.c  random.kx
modules/sockets/: Makefile.am  Makefile.in  kxipaddress.c  kxipaddress.h  kxpoll.c  kxpoll.h  kxsocket.c  kxsocket.h  sockets.c  sockets.kx  sockutils.c  sockutils.h
modules/system/: Makefile.am  Makefile.in  pid.c  pid.h  system.c  system.kx
modules/test/: Makefile.am  Makefile.in  test.kx
modules/threads/: Makefile.in  kxmutex.c  kxmutex.h  kxthread.c  kxthread.h  threads.c  threads.kx
modules/time/: Makefile.am  Makefile.in  kxtimevalue.c  kxtimevalue.h  time.c  time.kx
modules/xml/: Makefile.am  Makefile.in  kxxmldocument.c  kxxmldocument.h  kxxmlnode.c  kxxmlnode.h  xml.c  xml.h  xml.kx
src/: Makefile.am  Makefile.in  kxactivation.c  kxactivation.h  kxactivation_object.c  kxactivation_object.h  kxarray2d.c  kxarray2d.h  kxassociation.c  kxassociation.h  kxbaseobject.c  kxbaseobject.h  kxboolean.c  kxboolean.h  kxbytearray.c  kxbytearray.h  kxbytecode.c  kxbytecode.h  kxcallback.c  kxcallback.h  kxcfunction.c  kxcfunction.h  kxcharacter.c  kxcharacter.h  kxcodeblock.c  kxcodeblock.h  kxcompile_utils.c  kxcompile_utils.h  kxcompiler.c  kxcompiler.h  kxcore.c  kxcore.h  kxdecompiler.c  kxdecompiler.h  kxdictionary.c  kxdictionary.h  kxdictionary_utils.c  kxdictionary_utils.h  kxdynlib.c  kxdynlib.h  (+53 more)
src/compiler/: Makefile.am  Makefile.in  block.c  block.h  block_optimise.c  block_optimise.h  kxcomp.c  kxcomp.h  kxcompiler.c  kxcompiler.h  kxinstr.c  kxinstr.h  kxparser.c  kxparser.h
src/modules/: Makefile.am  Makefile.in
src/modules/cgi/: Makefile.am  Makefile.in  cgi.kx
src/modules/pool/: Makefile.in  kxpool.c  kxpool.h
src/modules/sockets/: Makefile.am  Makefile.in  kxipaddress.c  kxipaddress.h  kxsocket.c  sockets.kx  sockutils.c  sockutils.h
src/modules/system/: Makefile.in  pid.c  pid.h  system.c  system.kx
src/modules/test/: Makefile.in  test.kx
src/modules/threads/: Makefile.am  Makefile.in  threads.kx
src/modules/xml/: Makefile.am  Makefile.in  kxxmldocument.h  kxxmlnode.c  xml.c  xml.h  xml.kx
src/tools/: Makefile.am  Makefile.in
src/tools/docgen/: Makefile.am  Makefile.in  doc2html.kx  generate.sh  grabdoc.kx  head.html
src/tools/kx2carray/: Makefile.am  Makefile.in  main.c
src/tools/objgen/: Makefile.am  Makefile.in  objgen.kx  template.c  template.h
src/tools/wrapgen/: Makefile.am  Makefile.in  attribute.kx  constant.kx  container.c  container.h  function.kx  module.c  moduleobject.kx  object.c  object.h  prototype.kx  wrapgen.kx  wrapgen_utils.kx
src/utils/: Makefile.am  Makefile.in  bytearray.c  bytearray.h  dictionary.c  dictionary.h  hash.c  hash.h  list.c  list.h  log.c  log.h  utils.c  utils.h
src/vminit/: Makefile.am  Makefile.in  kxvminit.h  update.sh  vminit.kx
tests/: Makefile.am  Makefile.in  run.sh  test_array2d.kx  test_baseobject.kx  test_block.kx  test_bytearray.kx  test_codeblock.kx  test_compiler.kx  test_dictionary.kx  test_exception.kx  test_extra.kx  test_file.kx  test_float.kx  test_inlinecache.kx  test_integer.kx  test_list.kx  test_set.kx  test_string.kx  test_threads.kx  test_vm.kx
(+9 files in other folders)
