
TESTS_ENVIRONMENT = KREATRIX_MODULES_PATH="$(top_srcdir)/modules" ../src/kreatrix

TESTS=	test_integer.kx \
	test_baseobject.kx \
	test_list.kx \
	test_string.kx \
	test_dictionary.kx \
	test_file.kx \
	test_set.kx \
	test_block.kx \
	test_float.kx \
	test_compiler.kx \
	test_bytearray.kx \
	test_array2d.kx \
	test_codeblock.kx

MOSTLYCLEANFILES=test_file.data

EXTRA_DIST= \
	run.sh \
	test_integer.kx \
	test_baseobject.kx \
	test_list.kx \
	test_string.kx \
	test_dictionary.kx \
	test_file.kx \
	test_set.kx \
	test_block.kx \
	test_float.kx \
	test_compiler.kx \
	test_threads.kx \
	test_bytearray.kx \
	test_array2d.kx

