
EXTRA_DIST=\
	kxweb/kx.png\
	kxweb/kxweb.kx\
	kxweb/kxweb_threads.kx\
	kxweb/index.html\
	basics/00_overview.kx\
	basics/01_math.kx\
	basics/02_strings.kx\
	basics/03_conditions.kx\
	basics/04_cycles.kx\
	basics/05_class.kx \
	xml/example1.kx \
	gtk/gtkhelloworld.kx \
	gtk/gtkbuttons.kx \
	gtk/gtktextview.kx \
	gtk/gtktreeview.kx \
	gtk/gtkcombobox.kx
