
gtk_pkglibdir=${libdir}/kreatrix/gtk

LDFLAGS+= -fPIC -shared -Wall $(gtk_LIBS)
CFLAGS+= -fPIC $(gtk_CFLAGS) -I$(top_srcdir)/src

gtk_pkglib_PROGRAMS = gtk.so

gtk_so_SOURCES= \
   gobject.h \
gobject.c \
gtkobject.h \
gtkobject.c \
gtkwidget.h \
gtkwidget.c \
gtkcontainer.h \
gtkcontainer.c \
gtkbin.h \
gtkbin.c \
gtkwindow.h \
gtkwindow.c \
gtkbutton.h \
gtkbutton.c \
gtkcheckbutton.h \
gtkcheckbutton.c \
gtktogglebutton.h \
gtktogglebutton.c \
gtkscrolledwindow.h \
gtkscrolledwindow.c \
gtkcombobox.h \
gtkcombobox.c \
gtkbox.h \
gtkbox.c \
gtkvbox.h \
gtkvbox.c \
gtkhbox.h \
gtkhbox.c \
gtktable.h \
gtktable.c \
gtknotebook.h \
gtknotebook.c \
gtktextview.h \
gtktextview.c \
gtktreeview.h \
gtktreeview.c \
gtkmisc.h \
gtkmisc.c \
gtklabel.h \
gtklabel.c \
gtkentry.h \
gtkentry.c \
gtkadjustment.h \
gtkadjustment.c \
gtktreeviewcolumn.h \
gtktreeviewcolumn.c \
gtkcellrenderer.h \
gtkcellrenderer.c \
gtkcellrenderertext.h \
gtkcellrenderertext.c \
gtkaccelgroup.h \
gtkaccelgroup.c \
gtktextbuffer.h \
gtktextbuffer.c \
gtktexttagtable.h \
gtktexttagtable.c \
gtktexttag.h \
gtktexttag.c \
gtktreemodel.h \
gtktreemodel.c \
gtkliststore.h \
gtkliststore.c \
gtktreestore.h \
gtktreestore.c \
gtktreeselection.h \
gtktreeselection.c \
gtkrequisition.h \
gtkrequisition.c \
gtktextiter.h \
gtktextiter.c \
gtktreeiter.h \
gtktreeiter.c \
gtktreepath.h \
gtktreepath.c \
gtktextchildanchor.h \
gtktextchildanchor.c \
gdkrectangle.h \
gdkrectangle.c \
gtktextattributes.h \
gtktextattributes.c \
gtk.c \
   gtk_utils.c \
   gtk_utils.h \
   kxclosure.c \
   kxclosure.h \
   gdkevent.c \
   gdkevent.h \
   gtktextbuffer_extra.c \
   kxtree.c \
   kxtree.h

gtk_so_LDFLAGS= -module

gobject.h: kxgenerated.tmp
gobject.c: kxgenerated.tmp
gtkobject.h: kxgenerated.tmp
gtkobject.c: kxgenerated.tmp
gtkwidget.h: kxgenerated.tmp
gtkwidget.c: kxgenerated.tmp
gtkcontainer.h: kxgenerated.tmp
gtkcontainer.c: kxgenerated.tmp
gtkbin.h: kxgenerated.tmp
gtkbin.c: kxgenerated.tmp
gtkwindow.h: kxgenerated.tmp
gtkwindow.c: kxgenerated.tmp
gtkbutton.h: kxgenerated.tmp
gtkbutton.c: kxgenerated.tmp
gtkcheckbutton.h: kxgenerated.tmp
gtkcheckbutton.c: kxgenerated.tmp
gtktogglebutton.h: kxgenerated.tmp
gtktogglebutton.c: kxgenerated.tmp
gtkscrolledwindow.h: kxgenerated.tmp
gtkscrolledwindow.c: kxgenerated.tmp
gtkcombobox.h: kxgenerated.tmp
gtkcombobox.c: kxgenerated.tmp
gtkbox.h: kxgenerated.tmp
gtkbox.c: kxgenerated.tmp
gtkvbox.h: kxgenerated.tmp
gtkvbox.c: kxgenerated.tmp
gtkhbox.h: kxgenerated.tmp
gtkhbox.c: kxgenerated.tmp
gtktable.h: kxgenerated.tmp
gtktable.c: kxgenerated.tmp
gtknotebook.h: kxgenerated.tmp
gtknotebook.c: kxgenerated.tmp
gtktextview.h: kxgenerated.tmp
gtktextview.c: kxgenerated.tmp
gtktreeview.h: kxgenerated.tmp
gtktreeview.c: kxgenerated.tmp
gtkmisc.h: kxgenerated.tmp
gtkmisc.c: kxgenerated.tmp
gtklabel.h: kxgenerated.tmp
gtklabel.c: kxgenerated.tmp
gtkentry.h: kxgenerated.tmp
gtkentry.c: kxgenerated.tmp
gtkadjustment.h: kxgenerated.tmp
gtkadjustment.c: kxgenerated.tmp
gtktreeviewcolumn.h: kxgenerated.tmp
gtktreeviewcolumn.c: kxgenerated.tmp
gtkcellrenderer.h: kxgenerated.tmp
gtkcellrenderer.c: kxgenerated.tmp
gtkcellrenderertext.h: kxgenerated.tmp
gtkcellrenderertext.c: kxgenerated.tmp
gtkaccelgroup.h: kxgenerated.tmp
gtkaccelgroup.c: kxgenerated.tmp
gtktextbuffer.h: kxgenerated.tmp
gtktextbuffer.c: kxgenerated.tmp
gtktexttagtable.h: kxgenerated.tmp
gtktexttagtable.c: kxgenerated.tmp
gtktexttag.h: kxgenerated.tmp
gtktexttag.c: kxgenerated.tmp
gtktreemodel.h: kxgenerated.tmp
gtktreemodel.c: kxgenerated.tmp
gtkliststore.h: kxgenerated.tmp
gtkliststore.c: kxgenerated.tmp
gtktreestore.h: kxgenerated.tmp
gtktreestore.c: kxgenerated.tmp
gtktreeselection.h: kxgenerated.tmp
gtktreeselection.c: kxgenerated.tmp
gtkrequisition.h: kxgenerated.tmp
gtkrequisition.c: kxgenerated.tmp
gtktextiter.h: kxgenerated.tmp
gtktextiter.c: kxgenerated.tmp
gtktreeiter.h: kxgenerated.tmp
gtktreeiter.c: kxgenerated.tmp
gtktreepath.h: kxgenerated.tmp
gtktreepath.c: kxgenerated.tmp
gtktextchildanchor.h: kxgenerated.tmp
gtktextchildanchor.c: kxgenerated.tmp
gdkrectangle.h: kxgenerated.tmp
gdkrectangle.c: kxgenerated.tmp
gtktextattributes.h: kxgenerated.tmp
gtktextattributes.c: kxgenerated.tmp
gtk.c: kxgenerated.tmp

kxgenerated.tmp: generator/class.xml generator/structs.txt generator/enums.txt
	sh $(srcdir)/generate.sh $(top_builddir) $(top_srcdir) $(srcdir)
	
MAINTAINERCLEANFILES=\
	gobject.h \
gobject.c \
gtkobject.h \
gtkobject.c \
gtkwidget.h \
gtkwidget.c \
gtkcontainer.h \
gtkcontainer.c \
gtkbin.h \
gtkbin.c \
gtkwindow.h \
gtkwindow.c \
gtkbutton.h \
gtkbutton.c \
gtkcheckbutton.h \
gtkcheckbutton.c \
gtktogglebutton.h \
gtktogglebutton.c \
gtkscrolledwindow.h \
gtkscrolledwindow.c \
gtkcombobox.h \
gtkcombobox.c \
gtkbox.h \
gtkbox.c \
gtkvbox.h \
gtkvbox.c \
gtkhbox.h \
gtkhbox.c \
gtktable.h \
gtktable.c \
gtknotebook.h \
gtknotebook.c \
gtktextview.h \
gtktextview.c \
gtktreeview.h \
gtktreeview.c \
gtkmisc.h \
gtkmisc.c \
gtklabel.h \
gtklabel.c \
gtkentry.h \
gtkentry.c \
gtkadjustment.h \
gtkadjustment.c \
gtktreeviewcolumn.h \
gtktreeviewcolumn.c \
gtkcellrenderer.h \
gtkcellrenderer.c \
gtkcellrenderertext.h \
gtkcellrenderertext.c \
gtkaccelgroup.h \
gtkaccelgroup.c \
gtktextbuffer.h \
gtktextbuffer.c \
gtktexttagtable.h \
gtktexttagtable.c \
gtktexttag.h \
gtktexttag.c \
gtktreemodel.h \
gtktreemodel.c \
gtkliststore.h \
gtkliststore.c \
gtktreestore.h \
gtktreestore.c \
gtktreeselection.h \
gtktreeselection.c \
gtkrequisition.h \
gtkrequisition.c \
gtktextiter.h \
gtktextiter.c \
gtktreeiter.h \
gtktreeiter.c \
gtktreepath.h \
gtktreepath.c \
gtktextchildanchor.h \
gtktextchildanchor.c \
gdkrectangle.h \
gdkrectangle.c \
gtktextattributes.h \
gtktextattributes.c \
gtk.c \
	kxgenerated.tmp

EXTRA_DIST = gobject.h \
gobject.c \
gtkobject.h \
gtkobject.c \
gtkwidget.h \
gtkwidget.c \
gtkcontainer.h \
gtkcontainer.c \
gtkbin.h \
gtkbin.c \
gtkwindow.h \
gtkwindow.c \
gtkbutton.h \
gtkbutton.c \
gtkcheckbutton.h \
gtkcheckbutton.c \
gtktogglebutton.h \
gtktogglebutton.c \
gtkscrolledwindow.h \
gtkscrolledwindow.c \
gtkcombobox.h \
gtkcombobox.c \
gtkbox.h \
gtkbox.c \
gtkvbox.h \
gtkvbox.c \
gtkhbox.h \
gtkhbox.c \
gtktable.h \
gtktable.c \
gtknotebook.h \
gtknotebook.c \
gtktextview.h \
gtktextview.c \
gtktreeview.h \
gtktreeview.c \
gtkmisc.h \
gtkmisc.c \
gtklabel.h \
gtklabel.c \
gtkentry.h \
gtkentry.c \
gtkadjustment.h \
gtkadjustment.c \
gtktreeviewcolumn.h \
gtktreeviewcolumn.c \
gtkcellrenderer.h \
gtkcellrenderer.c \
gtkcellrenderertext.h \
gtkcellrenderertext.c \
gtkaccelgroup.h \
gtkaccelgroup.c \
gtktextbuffer.h \
gtktextbuffer.c \
gtktexttagtable.h \
gtktexttagtable.c \
gtktexttag.h \
gtktexttag.c \
gtktreemodel.h \
gtktreemodel.c \
gtkliststore.h \
gtkliststore.c \
gtktreestore.h \
gtktreestore.c \
gtktreeselection.h \
gtktreeselection.c \
gtkrequisition.h \
gtkrequisition.c \
gtktextiter.h \
gtktextiter.c \
gtktreeiter.h \
gtktreeiter.c \
gtktreepath.h \
gtktreepath.c \
gtktextchildanchor.h \
gtktextchildanchor.c \
gdkrectangle.h \
gdkrectangle.c \
gtktextattributes.h \
gtktextattributes.c \
gtk.c gtk.kx generate.sh kxgenerated.tmp \
generator/structs.txt \
generator/wrapper.kx \
generator/functions.txt \
generator/struct.kx \
generator/function.kx \
generator/enum.kx \
generator/module.c \
generator/structs.txt \
generator/generator.kx \
generator/Makefile-template.am \
generator/type.kx \
generator/object.c \
generator/object.h \
generator/class.xml \
generator/enums.txt \
generator/class.kx \
generator/utils.kx


gtk_pkglib_DATA=gtk.kx


