
utils_pkgincludedir=${pkgincludedir}/utils

noinst_LIBRARIES = libkxutils.a

libkxutils_a_SOURCES =  \
			list.c \
			list.h \
			hash.c \
			hash.h \
			utils.c \
			utils.h	\
			bytearray.h \
			bytearray.c \
			dictionary.c \
			dictionary.h \
			log.c \
			log.h

utils_pkginclude_HEADERS =\
	list.h \
	hash.h \
	utils.h \
	bytearray.h \
	dictionary.h
